tests/regression/errors/basic/syntax_error_4.csd
// Syntax error test 4 - missing semicolon
sus x drip = 4
sus y drip = x +   // Missing operand
vibez.spill("This should not execute")
